recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: type color
		 	setCouleur(orange:color)
                                          ^